# OCR-Pipeline

./: .gitignore  README.md  app.py  data.json  main.py  nehru.py  old_requirements.txt  output-display-testing.ipynb  poetry-101.md  pyproject.toml  recog_data.json  requirements.txt
modules/: bbox_merger.py  bbox_merger_copy.py  detector copy.py  detector.py  layloutlm.py  layout.py  recognizer copy.py  recognizer.py
utils/: lmv3_inference.ipynb  main_testing.ipynb  testing.ipynb
